# gamakay_tool_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
crates/gamakay_tool/: Cargo.toml
crates/gamakay_tool/src/: gui.rs  main.rs
crates/gamakay_tool/src/utils/: layout.rs  mod.rs
crates/gamakay_tool/src/utils/actions/: complex_action.rs  key_code.rs  key_combo.rs  mod.rs
crates/gamakay_tool_cli/: Cargo.toml
crates/gamakay_tool_cli/src/: gui.rs  main.rs
crates/gamakay_tool_cli/src/utils/: mod.rs
nix/: devShells.nix  overlays.nix  rust.nix
