[package]
authors = ["Jasper Albering <jasper.albering@gmail.com>"]
edition = "2024"
name = "gamakay_tool"
description = "A simple Rust project using Nix"
version = "0.1.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0.99"
hidapi = "2.6.5"
eframe = "0.34.1"
egui_extras = "0.34.1"
env_logger = "0.11.10"
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
